--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Chandler S. Baggett</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Helvetica Neue', Arial, sans-serif;
             margin: 0;
             padding: 0;
             color: #333;
-            background-color: #f4f4f4;
+            background-color: #f0f0f0;
         }
 
         .container {
@@ -20,53 +20,68 @@
         }
 
         header {
-            background: #007bff;
-            color: #ffffff;
-            padding: 10px 0;
+            background-color: #0056b3;
+            color: white;
+            padding: 15px 0;
             text-align: center;
         }
 
-        h1, h2 {
+        header h1, header p {
             margin: 0;
+            padding: 0;
         }
 
-        h2 {
-            margin-bottom: 20px;
+        header a {
+            color: #ffcc00;
+            text-decoration: none;
+        }
+
+        header a:hover {
+            color: #ffffff;
         }
 
         section {
-            background: #ffffff;
-            margin: 20px 0;
+            background-color: white;
             padding: 20px;
-            border-radius: 8px;
+            margin: 20px 0;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+        h2 {
+            color: #0056b3;
+        }
+
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
         }
 
         a {
             color: #007bff;
         }
 
-        footer {
-            background: #333;
-            color: #ffffff;
-            text-align: center;
-            padding: 10px 0;
+        a:hover {
+            text-decoration: underline;
         }
     </style>
 </head>
 <body>
     <header>
         <h1>Chandler S. Baggett</h1>
-        <p>Fort Collins, CO | (970) 657-3282 | <a href="mailto:chandler.baggett@outlook.com">chandler.baggett@outlook.com</a> | <a href="https://www.linkedin.com/in/chandler-baggett" style="color: #ffffff;">LinkedIn</a></p>
+        <p>Fort Collins, CO | (970) 657-3282 | <a href="mailto:chandler.baggett@outlook.com">chandler.baggett@outlook.com</a> | <a href="https://www.linkedin.com/in/chandler-baggett">LinkedIn</a></p>
     </header>
 
     <div class="container">
         <section>
-            <h2>About</h2>
-            <p>I hold a B.Sc. in Computer Science and an MBA from the University of Colorado Boulder, equipping me with a unique blend of technical acumen and business insight. My career has been marked by a commitment to innovation and efficiency, leading agile and DevOps projects to enhance operations and product quality. Currently, as an Independent Consultant, I leverage my analytical skills to provide data-driven solutions that drive legal strategy and decision-making.</p>
+            <h2>About Me</h2>
+            <p>I hold a B.Sc. in Computer Science and an MBA from the University of Colorado Boulder, equipping me with a unique blend of technical acumen and business insight. My career is marked by a commitment to innovation and efficiency, leading agile and DevOps projects to enhance operations and product quality. As an Independent Consultant, I leverage my analytical skills to provide data-driven solutions that drive legal strategy and decision-making.</p>
         </section>
 
         <section>
-            <h2>Experience</h2>
+            <h2>Professional Experience</h2>
             <p><strong>Independent Consultant</strong><br>
             Jul 2023 - Present, Fort Collins, CO<br>
             - Executed statistical analysis and project management for a class action lawsuit.<br>
@@ -107,4 +122,7 @@
     </div>
 
     <footer>
-        <p>Contact: <a href="mailto:chandler.baggett@outlook.com" style="color: #ffffff;">chandler
+        <p>Contact: <a href="mailto:chandler.baggett@outlook.com">chandler.baggett@outlook.com</a> | Connect on <a href="https://www.linkedin.com/in/chandler-baggett">LinkedIn</a></p>
+    </footer>
+</body>
+</html>
