--- a/index.html
+++ b/index.html
@@ -7,135 +7,86 @@
         body {
             font-family: 'Arial', sans-serif;
             color: #333;
-            line-height: 1.6;
             margin: 0;
             padding: 0;
-        }
-
-        header {
             background-color: #f4f4f4;
-            padding: 10px 20px;
-            text-align: center;
         }
 
-        header h1 {
-            margin: 0;
-        }
-
-        header p {
-            margin: 5px 0;
-        }
-
-        a {
-            color: #0275d8;
-            text-decoration: none;
-        }
-
-        a:hover {
-            text-decoration: underline;
-        }
-
-        section {
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
             padding: 20px;
         }
 
+        .header {
+            background: #0073e6;
+            color: white;
+            padding: 10px 0;
+            text-align: center;
+        }
+
+        .summary {
+            background-color: #e6f2ff;
+            padding: 10px;
+            margin-top: 20px;
+        }
+
+        .experience, .education, .skills {
+            margin-top: 20px;
+        }
+
         h2 {
-            color: #333;
+            background-color: #0073e6;
+            color: white;
+            padding: 5px;
         }
 
-        #experience div, #education div, #projects div {
-            background-color: #f9f9f9;
-            padding: 15px;
-            margin-bottom: 10px;
-            border-left: 5px solid #0275d8;
-        }
-
-        ul {
-            margin: 10px 0;
-        }
-
-        ul li {
-            margin-bottom: 5px;
-        }
-
-        #about {
-            background-color: #e9ecef;
-            padding: 15px;
+        a {
+            color: #0073e6;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Chandler S. Baggett</h1>
-        <p>Fort Collins, CO | (970) 657-3282 | <a href="mailto:chandler.baggett@outlook.com">chandler.baggett@outlook.com</a></p>
-        <p><a href="https://www.linkedin.com/in/chandler-baggett">LinkedIn</a> | <a href="https://chandler-baggett.github.io/">Personal Website</a></p>
-    </header>
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hi, I'm Chandler Baggett, a passionate software developer and consultant based in Fort Collins, CO. I love solving complex problems with technology and creating innovative solutions that drive business growth. When I'm not coding, you can find me exploring the Colorado outdoors or tinkering with the latest tech gadgets.</p>
-    </section>
-    <section id="summary">
-        <h2>Professional Summary</h2>
-        <p>Experienced professional with a B.Sc. in Computer Science and an MBA from the University of Colorado Boulder. Expert in blending software development with business strategy for tech growth. Led agile and DevOps projects to improve operations and product quality. Seeks a challenging role to promote innovation and efficiency.</p>
-    </section>
-    <section id="experience">
-        <h2>Professional Experience</h2>
-        <div>
-            <h3>Independent Consultant</h3>
-            <p>Jul 2023 - Present | Fort Collins, CO</p>
+    <div class="container">
+        <div class="header">
+            <h1>Chandler S. Baggett</h1>
+            <p>Fort Collins, CO | (970) 657-3282 | <a href="mailto:chandler.baggett@outlook.com">chandler.baggett@outlook.com</a></p>
+            <p><a href="https://www.linkedin.com/in/chandler-baggett">LinkedIn Profile</a></p>
+        </div>
+
+        <div class="summary">
+            <p>Experienced professional with a B.Sc. in Computer Science and an MBA from the University of Colorado Boulder. Expert in blending software development with business strategy for tech growth. Seeks a challenging role to promote innovation and efficiency.</p>
+        </div>
+
+        <div class="experience">
+            <h2>Professional Experience</h2>
+            <p><strong>Independent Consultant</strong> | Jul 2023 - Present | Fort Collins, CO</p>
             <ul>
-                <li>Provided independent statistical consulting for a class action lawsuit, executing statistical analysis and project management, and utilizing Python for data manipulation and analysis.</li>
+                <li>Provided independent statistical consulting for a class action lawsuit, utilizing Python for data analysis.</li>
                 <li>Delivered actionable insights that significantly contributed to the legal strategy.</li>
             </ul>
-        </div>
-        <div>
-            <h3>Charles Schwab - Software Developer</h3>
-            <p>May 2018 - Jul 2023 | Lone Tree, CO</p>
+            
+            <p><strong>Charles Schwab - Software Developer</strong> | May 2018 - Jul 2023 | Lone Tree, CO</p>
             <ul>
-                <li>Spearheaded the onboarding of new team members, achieving full proficiency in Windows and Mac OS environments within two weeks.</li>
-                <li>Managed the seamless data migration of 2,300 organizations and 4,500 individuals following the acquisition of TD Ameritrade, enhancing data integrity and preserving client trust.</li>
-                <li>Initiated strategic partnerships with engineering and business stakeholders to introduce new tax application forms, resulting in an improvement in compliance and user experience.</li>
-                <li>Led the adoption of agile and DevOps methodologies, shortening project delivery timelines and improving product quality.</li>
+                <li>Managed data migration and initiated strategic partnerships to improve compliance and user experience.</li>
+                <li>Led the adoption of agile and DevOps methodologies, enhancing product quality and efficiency.</li>
             </ul>
         </div>
-    </section>
-    <section id="projects">
-        <h2>Key Projects</h2>
-        <div>
-            <h3>Data Integration Project</h3>
-            <p>Managed a complex data integration project post-acquisition, ensuring seamless data transfer and system integration.</p>
+
+        <div class="education">
+            <h2>Education</h2>
+            <p><strong>University of Colorado at Boulder</strong></p>
+            <p>MBA | May 2020 - May 2022</p>
+            <p>B.Sc. in Computer Science | Jan 2013 - May 2018</p>
         </div>
-        <div>
-            <h3>Agile Transformation Initiative</h3>
-            <p>Led the transition to Agile methodologies, enhancing team productivity and project management efficiency.</p>
+
+        <div class="skills">
+            <h2>Skills & Technologies</h2>
+            <p>Programming Languages: Python, Java, SQL, TypeScript</p>
+            <p>Development Frameworks & Tools: Spring Framework, RabbitMQ, Cloud Foundry, Atlassian Suite, Git, Maven, Gradle</p>
+            <p>Software Development Practices: Agile, Scrum, CI/CD, DevOps</p>
         </div>
-    </section>
-    <section id="education">
-        <h2>Education</h2>
-        <div>
-            <h3>University of Colorado at Boulder</h3>
-            <p>Master of Business Administration (MBA) | May 2020 - May 2022</p>
-            <p>Bachelor of Science in Computer Science | Jan 2013 - May 2018</p>
-        </div>
-    </section>
-    <section id="skills">
-        <h2>Skills & Technologies</h2>
-        <ul>
-            <li>Programming Languages: Python, Java, SQL, TypeScript</li>
-            <li>Development Frameworks & Tools: Spring Framework, RabbitMQ, Cloud Foundry, Atlassian Suite (JIRA, Confluence), Git, Maven, Gradle, IntelliJ IDEA, Eclipse, HTML/CSS</li>
-            <li>Software Development Practices: Advanced proficiency in Agile and Scrum methodologies, CI/CD pipeline development, DevOps</li>
-            <li>Data Management: Expert in SQL for business requirements analysis and database solution implementation</li>
-            <li>Performance & Reliability: Proficient in identifying and resolving performance bottlenecks for high availability applications</li>
-            <li>Leadership & Communication: Demonstrated ability to lead development teams and foster innovation, with excellent collaboration skills</li>
-        </ul>
-    </section>
-    <section id="certifications">
-        <h2>Certifications and Additional Training</h2>
-        <ul>
-            <li>Software Engineering Bootcamp, Coding Temple (Remote, Expected Completion: August 2024)</li>
-            <li>Certified Associate in Project Management (CAPM)®, PMI (March 2024)</li>
-            <li>Certified Scrum Master (CSM), Scrum Alliance (March 2024)</li>
-        </ul>
-    </section>
+    </div>
 </body>
 </html>
