--- a/index.html
+++ b/index.html
@@ -26,13 +26,28 @@
             text-align: center;
         }
 
+        .photo {
+            width: 150px;
+            border-radius: 50%;
+            margin: 20px auto;
+            display: block;
+        }
+
         .summary {
             background-color: #e6f2ff;
             padding: 10px;
             margin-top: 20px;
+            text-align: center;
         }
 
-        .experience, .education, .skills {
+        .personal-statement {
+            background-color: #fff3e6;
+            padding: 10px;
+            margin-top: 20px;
+            font-style: italic;
+        }
+
+        .experience, .education, .skills, .interests {
             margin-top: 20px;
         }
 
@@ -55,8 +70,14 @@
             <p><a href="https://www.linkedin.com/in/chandler-baggett">LinkedIn Profile</a></p>
         </div>
 
+        <img src="your-photo.jpg" alt="Chandler Baggett" class="photo">
+
         <div class="summary">
             <p>Experienced professional with a B.Sc. in Computer Science and an MBA from the University of Colorado Boulder. Expert in blending software development with business strategy for tech growth. Seeks a challenging role to promote innovation and efficiency.</p>
+        </div>
+
+        <div class="personal-statement">
+            <p>As someone passionate about technology and innovation, I thrive on turning complex problems into simple, scalable solutions. I believe in the power of teamwork and continuous learning to achieve exceptional results.</p>
         </div>
 
         <div class="experience">
@@ -86,6 +107,11 @@
             <p>Programming Languages: Python, Java, SQL, TypeScript</p>
             <p>Development Frameworks & Tools: Spring Framework, RabbitMQ, Cloud Foundry, Atlassian Suite, Git, Maven, Gradle</p>
             <p>Software Development Practices: Agile, Scrum, CI/CD, DevOps</p>
+        </div>
+
+        <div class="interests">
+            <h2>Interests</h2>
+            <p>Apart from being a tech enthusiast, I enjoy hiking in the Colorado mountains, reading about innovative startups, and volunteering at local community centers. These activities help me stay balanced and inspired.</p>
         </div>
     </div>
 </body>
