--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Chandler S. Baggett</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto+Slab:wght@400;700&display=swap');
+
         body {
-            font-family: 'Arial', sans-serif;
+            font-family: 'Open Sans', sans-serif;
             color: #333;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #eaeff2;
         }
 
         .container {
@@ -17,10 +19,11 @@
             margin: auto;
             background: white;
             padding: 20px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
 
         .header {
-            background: #0073e6;
+            background: #005f73;
             color: white;
             padding: 10px 0;
             text-align: center;
@@ -33,22 +36,20 @@
             display: block;
         }
 
-        .summary {
+        .summary, .personal-statement {
             background-color: #e6f2ff;
             padding: 10px;
             margin-top: 20px;
             text-align: center;
-        }
-
-        .personal-statement {
-            background-color: #fff3e6;
-            padding: 10px;
-            margin-top: 20px;
-            font-style: italic;
+            border-left: 5px solid #005f73;
         }
 
         .experience, .education, .skills, .interests {
             margin-top: 20px;
+        }
+
+        h1, h2 {
+            font-family: 'Roboto Slab', serif;
         }
 
         h2 {
@@ -77,7 +78,7 @@
         </div>
 
         <div class="personal-statement">
-            <p>As someone passionate about technology and innovation, I thrive on turning complex problems into simple, scalable solutions. I believe in the power of teamwork and continuous learning to achieve exceptional results.</p>
+            <p>Passionate about technology and innovation, I thrive on turning complex problems into simple, scalable solutions. I believe in the power of teamwork and continuous learning to achieve exceptional results.</p>
         </div>
 
         <div class="experience">
